fix mobile layout issue

--- a/starsky/starsky/clientapp/src/style/css/01-base.css
+++ b/starsky/starsky/clientapp/src/style/css/01-base.css
@@ -23,10 +23,6 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, picture {
     display: block; }
 
-body {
-    line-height: 1;
-}
-
 ol, ul {
     list-style: none; }
 
@@ -84,8 +80,8 @@ html {
     box-sizing: border-box;
 }
 
-html,
 body {
+    line-height: 1;
     font-family: "Gloriola Std", sans-serif;
     font-weight: 100;
     font-size: 16px;
